--- a/app.yaml
+++ b/app.yaml
@@ -9,8 +9,9 @@ handlers:
   static_dir: static
   
 - url: /.*
-  script: main.application
-    
+  script: main.app
+  login: required
+  
 libraries:
 - name: webapp2
   version: latest
