Fixed a bug that banking cart filter by seller id should use string instead of int.

--- a/index.yaml
+++ b/index.yaml
@@ -28,3 +28,8 @@ indexes:
   - name: tags
   - name: created_time
     direction: desc
+
+- kind: BuyOrderCart
+  properties:
+  - name: terminal_seller
+  - name: payable_balance
