--- a/index.yaml
+++ b/index.yaml
@@ -33,3 +33,8 @@ indexes:
   properties:
   - name: terminal_seller
   - name: payable_balance
+
+- kind: BuyOrderCart
+  ancestor: yes
+  properties:
+  - name: status
