User info communication property update page is done.

--- a/index.yaml
+++ b/index.yaml
@@ -37,4 +37,14 @@ indexes:
 - kind: BuyOrderCart
   ancestor: yes
   properties:
+  - name: payable_balance
+
+- kind: BuyOrderCart
+  ancestor: yes
+  properties:
+  - name: receivable_balance
+
+- kind: BuyOrderCart
+  ancestor: yes
+  properties:
   - name: status
