--- a/index.yaml
+++ b/index.yaml
@@ -31,6 +31,11 @@ indexes:
 
 - kind: BuyOrderCart
   properties:
+  - name: broker
+  - name: status
+
+- kind: BuyOrderCart
+  properties:
   - name: terminal_seller
   - name: payable_balance
 
