More work on reports

--- a/index.yaml
+++ b/index.yaml
@@ -42,6 +42,11 @@ indexes:
 - kind: BuyOrderCart
   ancestor: yes
   properties:
+  - name: age
+
+- kind: BuyOrderCart
+  ancestor: yes
+  properties:
   - name: payable_balance
 
 - kind: BuyOrderCart
