Adding auditing model to base so we can create an auditing trail at field level. This is being used in auditing cart status field change along approval status. We are implementing shipping process also so parties can use button on the cart page to move cart along its state machine. This is a significant change. Current model is stable but shipping state machine controller is not written yet.

--- a/index.yaml
+++ b/index.yaml
@@ -68,3 +68,9 @@ indexes:
   ancestor: yes
   properties:
   - name: status
+
+- kind: MyAudit
+  ancestor: yes
+  properties:
+  - name: created_time
+    direction: desc
