--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: himepostoffice
+application: anthem-market-place
 version: 1
 runtime: python27
 api_version: 1
@@ -18,3 +18,7 @@ libraries:
   
 - name: jinja2
   version: latest
+
+pagespeed:
+  enabled_rewriters:
+  - MinifyCss
