--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,12 @@ handlers:
 - url: /static
   static_dir: static
   
+- url: /_ah/channel/connected/
+  script: main.app
+
+- url: /_ah/channel/disconnected/
+  script: main.app
+  
 - url: /.*
   script: main.app
   login: required
@@ -24,4 +30,4 @@ pagespeed:
   - MinifyCss
 
 inbound_services:
-  - channel_presence
+- channel_presence
