Fix banking cart controller. Also, we are allowing creating payin slip when cart terminal_buyer is None. This is a loophole I need to address later.

--- a/index.yaml
+++ b/index.yaml
@@ -48,6 +48,16 @@ indexes:
 - kind: BuyOrderCart
   properties:
   - name: broker
+  - name: payable_balance
+
+- kind: BuyOrderCart
+  properties:
+  - name: broker
+  - name: receivable_balance
+
+- kind: BuyOrderCart
+  properties:
+  - name: broker
   - name: status
 
 - kind: BuyOrderCart
