--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /_ah/channel/disconnected/
   script: main.app
   
+- url: /
+  script: main.app
+
 - url: /.*
   script: main.app
   login: required
