Fixed a bug in reportIncome query that as Doc I should see both payin and payouts.

--- a/index.yaml
+++ b/index.yaml
@@ -23,6 +23,13 @@ indexes:
   - name: age
     direction: desc
 
+- kind: AccountingSlip
+  ancestor: yes
+  properties:
+  - name: party_b
+  - name: age
+    direction: desc
+
 - kind: BuyOrder
   properties:
   - name: is_closed
