--- a/app.yaml
+++ b/app.yaml
@@ -14,7 +14,7 @@ handlers:
 - url: /_ah/channel/disconnected/
   script: main.app
   
-- url: /
+- url: /wallet/postback
   script: main.app
 
 - url: /.*
